# snake-fullstack

./: .gitignore  LICENSE
client-cpp/: CMakeLists.txt
client-cpp/src/: main.cpp
